--- a/buttonChanger/package.json
+++ b/buttonChanger/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "airmoney-cli": "^0.5.0"
   },
   "dependencies": {
     "airmoney-sdk": "file:./libs/airmoney-sdk-v3.0.5.tgz",
