--- a/buttonChanger/package.json
+++ b/buttonChanger/package.json
@@ -7,16 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "tsc && vite build && airmoney-cli serve -f dist",
+    "serve:dev": "~/Documents/Work/liem/airmoney/repo/airmoney-cli-js/dist/index.js serve --app-url http://localhost:5173",
     "upload": "tsc && vite build && airmoney-cli upload -f dist"
   },
   "devDependencies": {
+    "@airmoney-degn/airmoney-cli": "^0.10.1",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
     "vite": "^6.0.1",
-    "airmoney-cli": "^0.5.0"
+    "vite-plugin-static-copy": "^3.1.0"
   },
   "dependencies": {
-    "airmoney-sdk": "file:./libs/airmoney-sdk-v3.0.5.tgz",
-    "vite-plugin-singlefile": "^2.1.0"
+    "@airmoney-degn/controller-sdk": "^5.4.1"
   }
 }
